[gd_scene load_steps=9 format=4 uid="uid://ruvc0jloqiwp"]

[ext_resource type="Script" uid="uid://cr0h06xsruoou" path="res://scripts/VinceScripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bdc8hxybp43g0" path="res://scenes/character_body_2d.tscn" id="4_yynel"]
[ext_resource type="PackedScene" uid="uid://76m8ch5ccxjm" path="res://scenes/VinceScenes/endLocation.tscn" id="5_pqswy"]
[ext_resource type="PackedScene" uid="uid://bkg07ke3vrxjg" path="res://scenes/VinceScenes/spawn_manager.tscn" id="6_0clep"]
[ext_resource type="PackedScene" uid="uid://bgr010o7fytcq" path="res://scenes/VinceScenes/spawn_point.tscn" id="7_ogvv1"]
[ext_resource type="Texture2D" uid="uid://celww7vgvghtf" path="res://assets/cave tileset.png" id="8_yynel"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xy07t"]
texture = ExtResource("8_yynel")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/terrains_peering_bit/top_left_corner = 0
5:0/0/terrains_peering_bit/top_side = 0
5:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_1kx1b"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_xy07t")

[node name="VinceTestScene" type="Node"]
script = ExtResource("1_0wfyh")

[node name="Player" parent="." instance=ExtResource("4_yynel")]
position = Vector2(7, 112)

[node name="ShadowPositionTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="endLocation" parent="." instance=ExtResource("5_pqswy")]
position = Vector2(98, 145)
collision_layer = 2
collision_mask = 2

[node name="SpawnManager" parent="." instance=ExtResource("6_0clep")]

[node name="SpawnPoint" parent="SpawnManager" instance=ExtResource("7_ogvv1")]
position = Vector2(55, 147)

[node name="SpawnPoint2" parent="SpawnManager" instance=ExtResource("7_ogvv1")]
position = Vector2(63, 133)

[node name="SpawnPoint3" parent="SpawnManager" instance=ExtResource("7_ogvv1")]
position = Vector2(52, 140)

[node name="SpawnPoint4" parent="SpawnManager" instance=ExtResource("7_ogvv1")]
position = Vector2(60, 126)

[node name="SpawnPoint5" parent="SpawnManager" instance=ExtResource("7_ogvv1")]
position = Vector2(60, 163)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(53, 150)
scale = Vector2(0.2, 0.2)
tile_map_data = PackedByteArray("AAD6////AAADAAMAAAAHAAEAAAADAAIAAAAHAAAAAAADAAEAAAAHAP//AAADAAEAAAAHAP7/AAADAAAAAAABAPv/AAACAAMAAAAAAPv/AAABAAMAAAD///v/AAABAAMAAAD+//v/AAABAAMAAAD9//v/AAAAAAMAAAAIAPn/AAACAAIAAAAIAPj/AAACAAAAAAAHAPn/AAAAAAIAAAAHAPj/AAAAAAAAAAABAPj/AAACAAIAAAABAPf/AAACAAAAAAAAAPj/AAABAAIAAAAAAPf/AAABAAAAAAD///j/AAABAAIAAAD///f/AAABAAAAAAD+//j/AAAAAAIAAAD+//f/AAAAAAAAAAAFAPr/AAACAAIAAAAFAPn/AAACAAEAAAAFAPj/AAACAAEAAAAFAPf/AAACAAAAAAAEAPr/AAAAAAIAAAAEAPn/AAAAAAEAAAAEAPj/AAAAAAEAAAAEAPf/AAAAAAAAAAABAAgAAAACAAIAAAABAAcAAAACAAEAAAABAAYAAAACAAEAAAABAAUAAAACAAAAAAAAAAgAAAABAAIAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAAAAAD//wgAAAABAAIAAAD//wcAAAABAAEAAAD//wYAAAABAAEAAAD//wUAAAABAAAAAAD+/wgAAAABAAIAAAD+/wcAAAABAAEAAAD+/wYAAAABAAEAAAD+/wUAAAABAAAAAAD9/wgAAAABAAIAAAD9/wcAAAABAAEAAAD9/wYAAAABAAEAAAD9/wUAAAABAAAAAAD8/wgAAAABAAIAAAD8/wcAAAABAAEAAAD8/wYAAAABAAEAAAD8/wUAAAABAAAAAAD7/wgAAAAAAAIAAAD7/wcAAAAAAAEAAAD7/wYAAAAAAAEAAAD7/wUAAAAAAAAAAAADAAIAAAACAAIAAAADAAEAAAACAAEAAAADAAAAAAACAAEAAAADAP//AAACAAEAAAADAP7/AAACAAAAAAACAAIAAAABAAIAAAACAAEAAAABAAEAAAACAAAAAAABAAEAAAACAP//AAABAAEAAAACAP7/AAABAAAAAAABAAIAAAABAAIAAAABAAEAAAABAAEAAAABAP//AAABAAEAAAABAP7/AAABAAAAAAAAAAIAAAABAAIAAAAAAAEAAAABAAEAAAAAAP//AAABAAEAAAAAAP7/AAABAAAAAAD//wIAAAABAAIAAAD//wEAAAABAAEAAAD//wAAAAABAAEAAAD/////AAABAAEAAAD///7/AAABAAAAAAD+/wIAAAAAAAIAAAD+/wEAAAAAAAEAAAD+/wAAAAAAAAEAAAD+////AAAAAAEAAAD+//7/AAAAAAAAAAAJAPX/AAACAAIAAAAJAPT/AAACAAAAAAAIAPX/AAAAAAIAAAAIAPT/AAAAAAAAAAANAPf/AAACAAIAAAANAPb/AAACAAAAAAAMAPf/AAAAAAIAAAAMAPb/AAAAAAEAAAAMAPX/AAAAAAAAAAAFAPT/AAACAAMAAAAEAPT/AAABAAMAAAADAPT/AAAAAAMAAAARAPP/AAACAAIAAAARAPL/AAACAAAAAAAQAPP/AAABAAIAAAAQAPL/AAABAAAAAAAPAPP/AAABAAIAAAAPAPL/AAABAAAAAAAOAPP/AAABAAIAAAAOAPL/AAABAAAAAAANAPP/AAABAAIAAAANAPL/AAABAAAAAAAMAPP/AAAAAAIAAAAMAPL/AAAAAAAAAAD+//X/AAABAAIAAAD+//T/AAAFAAEAAAD9//X/AAAAAAIAAAD9//T/AAAAAAAAAAD///X/AAABAAIAAAD///T/AAAEAAEAAAAAAPX/AAACAAIAAAAAAPT/AAACAAAAAAD///P/AAACAAAAAAD+//P/AAAAAAAAAAABAAAAAAABAAEAAAAAAAAAAAABAAEAAAA=")
tile_set = SubResource("TileSet_1kx1b")
