[gd_scene load_steps=6 format=3 uid="uid://ruvc0jloqiwp"]

[ext_resource type="Script" uid="uid://cr0h06xsruoou" path="res://scripts/VinceScripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://ciifuwk14mqgn" path="res://scenes/VinceScenes/player.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bds40bph7ucjn" path="res://scenes/VinceScenes/mob.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://bsveuemeeofc6" path="res://scenes/VinceScenes/hud.tscn" id="4_jyhfs"]

[sub_resource type="Curve2D" id="Curve2D_o5qli"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -184, -168, 0, 0, 0, 0, 192, -168, 0, 0, 0, 0, 192, 256, 0, 0, 0, 0, -184, 256, 0, 0, 0, 0, -184, -160)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")
mob_scene = ExtResource("2_sugp2")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_o5qli")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-184, -168)

[node name="HUD" parent="." instance=ExtResource("4_jyhfs")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
